alterado caminhos de arquivos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <!-- Push.js -->
-  <script src="/js/lib/push.min.js"></script>
+  <script src="js/lib/push.min.js"></script>
 </head>
 <body>
 
@@ -30,15 +30,15 @@
 
   <div class="actions">
     <button data-pomodoro="start" title="iniciar" class="actions-start">
-      <img src="/img/play.svg" alt="iniciar">
+      <img src="img/play.svg" alt="iniciar">
     </button>
 
     <button data-pomodoro="stop" title="pausar" class="actions-stop hide">
-      <img src="/img/pause.svg" alt="pausar">
+      <img src="img/pause.svg" alt="pausar">
     </button>
     
     <button data-pomodoro="reset" title="resetar" class="actions-reset">
-      <img src="/img/rotate.svg" alt="resetar">
+      <img src="img/rotate.svg" alt="resetar">
     </button>
   </div>
 
