adicionado button para testar mais rapido

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button data-pomodoro="25" class="button active">Pomodoro</button>
     <button data-pomodoro="5" class="button">Intervalo Curto</button>
     <button data-pomodoro="10" class="button">Intervalo Longo</button>
+    <button data-pomodoro="teste" class="button">Teste</button>
   </div>
 
   <main data-pomodoro="display" class="display">00:00</main>
